Web socket additon